small fix of test